--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Fran & Rom - Tu Agencia de Viajes Confiable</title>
     <meta name="description" content="Fran & Rom - Tu agencia de viajes confiable. Viajes a San Clemente, Las Toninas, Mar del Tuyú y más. ¡Reserva tu próximo viaje!">
     <meta name="keywords" content="viajes, turismo, agencia de viajes, vacaciones, playa, destinos, Fran & Rom">
@@ -54,7 +54,7 @@
             </nav>
 
             
-            <button class="menu-mobile" id="menuMobile">
+            <button class="menu-mobile" id="menuMobileBtn" aria-label="Abrir menú">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
